2004-01-25  Jorn Baayen  <jorn@nl.linux.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:

	Ensure we keep a selection when possible.

2004-01-25  Jorn Baayen  <jorn@nl.linux.org>

	* src/Album.cs:
	* src/Song.cs:

	Fix album covers only showing up for the first song.
	
	* AUTHORS:
	
	Added Lee.

2004-01-25  Jorn Baayen  <jorn@nl.linux.org>

	* libmuine/db.c: (db_unpack_bool), (db_pack_bool):
	* libmuine/db.h:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/Album.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:

	Fully asynchronous cover image fetching.

	Again, the DB format has changed..

2004-01-25  Jorn Baayen  <jorn@nl.linux.org>

	* libmuine/db.c: (db_store):
	* libmuine/pointer-list-view.c: (pointer_list_view_changed):
	* libmuine/pointer-list-view.h:
	* src/CoverDatabase.cs:
	* src/HandleView.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:

	File existance/change/removal checking on startup works. And async ;)

2004-01-25  Jorn Baayen  <jorn@nl.linux.org>

	* src/PlaylistWindow.cs:

	Check that we have no watched folders instead of an empty lib.

2004-01-25  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* data/muine.schemas.in:
	* libmuine/metadata.c: (metadata_load), (metadata_get_mtime):
	* libmuine/metadata.h:
	* src/Action.cs:
	* src/ActionThread.cs:
	* src/CoverDatabase.cs:
	* src/Makefile.am:
	* src/Metadata.cs:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:

	First stab at async stuff. This is not yet done.. will finish
	tomorrow.

	Again, the DB format changed.

2004-01-24  Jorn Baayen  <jorn@nl.linux.org>

	* configure.in:

	Added "es" and "nl" to ALL_LINGUAS.

2004-01-24  Lee Willis  <lee@leewillis.co.uk>
            Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* data/glade/PlaylistWindow.glade:
	* src/AddSongWindow.cs:
	* src/AmazonSearchService.cs:
	* src/AmazonSearchService.wsdl:
	* src/CoverDatabase.cs:
	* src/Makefile.am:
	* src/PlaylistWindow.cs:
	* src/Song.cs:
