@@ -274,7 +274,9 @@ pointer_list_view_changed (PointerListView *view,
 	GtkTreeIter iter;
 	GtkTreePath *path;
 
-	pointer_list_model_pointer_get_iter (view->model, pointer, &iter);
+	if (!pointer_list_model_pointer_get_iter (view->model, pointer, &iter))
+		return;
+
 	path = gtk_tree_model_get_path (GTK_TREE_MODEL (view->model), &iter);
 	gtk_tree_model_row_changed (GTK_TREE_MODEL (view->model), path, &iter);
 	gtk_tree_path_free (path);
